--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my shop</title>
+    <title>EasyBasket</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
-</head>
+    <link rel="alternate icon" type="image/png" href="shop.png" </head>
 
 <body>
     <div class="wrapper">
         <header class="main-header">
 
             <div id="header-content">
-                <div id="logo">🛍️ MyShop</div>
+                <div id="logo"><img src="shop.png" alt="logo"> EasyBasket</div>
 
                 <!-- <div> -->
                 <input type="text" id="search-input" placeholder="search products..." class="search-bar">
