--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="header-content">
                 <div id="logo"><img src="shop.png" alt="logo"> EasyBasket</div>
 
-                <!-- <div> -->
+
                 <input type="text" id="search-input" placeholder="search products..." class="search-bar">
 
                 <div class="icons">
@@ -35,15 +35,9 @@
                     </nav>
                 </div>
 
-                <!-- </div> -->
             </div>
 
-            <!-- פאנל הסל -->
-            <!-- <div id="cartPanel"
-                style="display:none; position:fixed; right:20px; top:70px; background:white; border:1px solid #ccc; padding:15px; width:300px; max-height:400px; overflow-y:auto; box-shadow:0 0 10px rgba(0,0,0,0.3); z-index:999;">
-                <h3>הסל שלי</h3>
-                <div id="cartItems"></div>
-            </div> -->
+
             <div id="categories-menu">
 
 
@@ -114,23 +108,27 @@
 
 
             <section id="home-page">
+                <div class="ads-container">
+                    <h2>מודעות</h2>
+                    <div class="ads-content">
+                        <!-- כאן תוכן המודעות שלך -->
+                        מודעות
+                    </div>
+                </div>
 
-                <section>
-                    מודעות
-                </section>
-                <section>קטגוריה 1
-                </section>
-
-                <section>קטגוריה 2</section>
-
-                <section>קטגוריה 3</section>
-
-
+                <div class="categories-container">
+                    <div class="left-categories">
+                        <a href="#" data-category="woman">women</a>
+                        <a href="#" data-category="man">men</a>
+                        <a href="#" data-category="electronics">Electronics</a>
+                        <div class="category-box" data-category="woman">women</div>
+                        <div class="category-box" data-category="man">men</div>
+                    </div>
+                    <div class="category-right" data-category="electronics">beauty</div>
+                </div>
             </section>
-
             <section id="results"></section>
 
-            <!-- <section id="shopping-cart"> -->
 
 
             </section>
