change the mail

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="footer-section">
                     <h3>contact us</h3>
                     <p><i class="fas fa-phone"></i> 02-99680269</p>
-                    <p><i class="fas fa-envelope"></i> info@digitalstore.com</p>
+                    <p><i class="fas fa-envelope"></i> info@easybasket.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> israel, tel aviv</p>
                 </div>
                 <div class="footer-section">
