--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 
             <section id="results"></section>
 
-            <section id="checkout-page"></section>
-            <section id="order-confirmation"></section>
+            <!-- <section id="checkout-page"></section> -->
+            <!-- <section id="order-confirmation"></section> -->
 
 
             <section id="register-login-page" class="popup hidden">
@@ -255,5 +255,6 @@
 </body>
 
 <script src="script.js" defer></script>
+
 
 </html>
